@@ -1623,3 +1623,4 @@
 		gnome have taller window titlebars and the widget was not
 		tall enough.
 3.3.87	12dec17	Added missing prototype for ghw_read_sm_hdr in ghwlib.h.
+		Made intptr_t changes vs long during casting for win64.
